--- a/Stream/src/styles.scss
+++ b/Stream/src/styles.scss
@@ -1,1 +1,18 @@
 /* You can add global styles to this file, and also import other style files */
+/* Importing Bootstrap SCSS file. */
+@import "~bootstrap/scss/bootstrap";
+
+* {
+    margin: 0;
+    background: #141414;
+}
+
+.cursor-pointer{
+    cursor: pointer;
+}
+
+video{
+    border-radius: 8px;
+}
+/* Importing Bootstrap SCSS file. */
+@import '~bootstrap/scss/bootstrap';
