--- a/Stream/src/app/pages/home/home.component.html
+++ b/Stream/src/app/pages/home/home.component.html
@@ -1,8 +1,12 @@
 <br><br>
 
-<h1 style="color: white;">Streaming</h1>
+<h4 style="color: white;">Recomendados para você</h4>
 
-<div class="list"></div>
+<div class="list mt-4" >
+    <div class="img" >
+        <img (click)="open(content)" src="../../../assets/images/tileburnedin.jpeg" width="300" height="200px" alt="">
+    </div>
+</div>
 
 
 <ng-template #content let-modal>
