--- a/Stream/src/app/pages/home/home.component.scss
+++ b/Stream/src/app/pages/home/home.component.scss
@@ -1,9 +1,8 @@
-.player {
-    margin: 30px;
-}
 
-.grid-template-4 {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-gap: 10px;
+
+app-data-player{
+    text-align: center;
+    padding: 20px;
+    background: #141414;
+    width: 550px;
 }
