--- a/Stream/src/styles.scss
+++ b/Stream/src/styles.scss
@@ -4,15 +4,49 @@
 
 * {
     margin: 0;
+}
+body {
     background: #141414;
 }
 
-.cursor-pointer{
+.cursor-pointer {
     cursor: pointer;
 }
 
-video{
+.list {
+    .img {
+        img {
+            border-radius: 8px;
+        }
+    }
+}
+
+video {
+    border: 2px solid rgb(167, 164, 164);
+}
+
+.season-title {
+    color: white;
+}
+
+.season-desc {
+    color: white;
+    font-size: 12px;
+}
+
+select {
+    border: none;
+    height: 32px;
     border-radius: 8px;
 }
-/* Importing Bootstrap SCSS file. */
-@import '~bootstrap/scss/bootstrap';
+
+.cursor-pointer {
+    cursor: pointer;
+}
+
+.ellipsis {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    max-width: 400px;
+}
