--- a/Stream/src/app/components/data-player/data-player.component.html
+++ b/Stream/src/app/components/data-player/data-player.component.html
@@ -21,7 +21,7 @@
     </select>
 </div>
 
-<div class="list mt-4 d-flex" *ngFor="let prev of data" (click)="loadEpisode(prev)">
+<div class="list mt-4 d-flex cursor-pointer" *ngFor="let prev of data" (click)="loadEpisode(prev)">
     <div class="img mr-4">
         <img src="../../../assets/images/tileburnedin.jpeg" width="80" height="50" alt="">
     </div>
